Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<h1 class="huge-title">Journals</h1>
 
 	<div class="button-container">
-		<a class="download-button" href="#">Comming Soon</a>
+		<a class="download-button" href="#">Coming Soon</a>
 	</div>
 
 	<div class="subtitle-container">
@@ -130,7 +130,7 @@
 	</div>
 
 	<div class="button-container">
-		<a class="download-button" href="#">Comming Soon</a>
+		<a class="download-button" href="#">Coming Soon</a>
 	</div>
 
 	<div style="height: 82px;">
