Minor design changes

--- a/index.html
+++ b/index.html
@@ -12,14 +12,22 @@
 </head>
 <body>
 
-	<nav class="navbar is-transparent">
-		<div class="navbar-end">
-			<a class="navbar-item" href="mailto:renanbenattidias@icloud.com">Support</a>
-			<a class="navbar-item" href="https://twitter.com/renanbdias" target="_blank">
-				<img class="logo" src="images/twitter-logo.svg" alt="Twitter Logo">
-			</a>
-		</div>
+	<nav>
+	  <ul>
+	  	<li class="nav-li">
+	  		<a class="navbar-item" href="mailto:renanbenattidias@icloud.com">Support</a>
+	  	</li>
+
+	  	<li>
+	  		<a class="navbar-item" href="https://twitter.com/renanbdias" target="_blank">
+					<img class="logo" src="images/twitter-logo.svg" alt="Twitter Logo">
+				</a>
+	  	</li>
+	  </ul>
 	</nav>
+
+	<div class="top-spacer">
+	</div>
 
 	<div class="container">
 		<div class="centered-icon">
