Privacy policy and support

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 	  		<a class="navbar-item" href="mailto:renanbenattidias@icloud.com">Support</a>
 	  	</li>
 
+	  	<li class="nav-li">
+	  		<a class="navbar-item" href="privacy-policy-en.html">Privacy Policy</a>
+	  	</li>
+
 	  	<li>
 	  		<a class="navbar-item" href="https://twitter.com/renanbdias" target="_blank">
 					<img class="logo" src="images/twitter-logo.svg" alt="Twitter Logo">
