Terms of use and updated privacy policy

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 	  		<a class="navbar-item" href="privacy-policy-en.html">Privacy Policy</a>
 	  	</li>
 
+	  	<li class="nav-li">
+	  		<a class="navbar-item" href="terms-of-use-en.html">Terms of Use</a>
+	  	</li>
+
 	  	<li>
 	  		<a class="navbar-item" href="https://twitter.com/renanbdias" target="_blank">
 					<img class="logo" src="images/twitter-logo.svg" alt="Twitter Logo">
