--- a/privacy-policy-br.html
+++ b/privacy-policy-br.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Jounarls Política de Privacidade</title>
+	<title>Diários Política de Privacidade</title>
 	<link rel="stylesheet" media="(min-width: 1025px)" href="styles-desktop.css">
 	<link rel="stylesheet" media="(max-width: 768px)" href="styles-mobile.css">
 </head>
@@ -27,6 +27,51 @@
 		</h4>
 		<li>
 			Nenhuma Informação Pessoal: Nosso aplicativo não coleta nenhuma informação pessoal dos usuários. Ele opera usando sua conta do iCloud para funcionalidade.
+		</li>
+	</ul>
+
+	<ul>
+		<h4>
+			Detalhes da Assinatura:
+		</h4>
+		<li>
+			Nossos serviços de assinatura estão disponíveis por um período específico e a um preço determinado. Os detalhes sobre a duração da assinatura, preços e quaisquer recursos ou benefícios adicionais serão apresentados claramente dentro do aplicativo.
+		</li>
+	</ul>
+
+	<ul>
+		<h4>
+			Pagamento e Cobrança:
+		</h4>
+		<li>
+			Todos os pagamentos das assinaturas são processados através da App Store da Apple. Você será cobrado de acordo com os preços aplicáveis e a frequência de cobrança divulgada dentro do aplicativo. Por favor, note que quaisquer impostos ou taxas impostas pela loja de aplicativos ou outros processadores de pagamento podem ser aplicáveis.
+		</li>
+	</ul>
+
+	<ul>
+		<h4>
+			Cancelamento e Reembolsos:
+		</h4>
+		<li>
+			Se você deseja cancelar sua assinatura ou solicitar um reembolso, siga os procedimentos fornecidos pela App Store da Apple. Recomendamos revisar os termos e condições da loja de aplicativos para obter instruções detalhadas sobre como gerenciar assinaturas, cancelamentos e reembolsos.
+		</li>
+	</ul>
+
+	<ul>
+		<h4>
+			Renovação Automática:
+		</h4>
+		<li>
+			A menos que você escolha cancelar sua assinatura antes da data de renovação, sua assinatura será renovada automaticamente no final de cada período de assinatura. Você pode gerenciar as configurações da sua assinatura e desativar a renovação automática acessando as configurações da sua conta na loja de aplicativos.
+		</li>
+	</ul>
+
+	<ul>
+		<h4>
+			Consentimento do Usuário:
+		</h4>
+		<li>
+			Ao assinar nossos serviços, você reconhece que leu e concorda com os termos e condições descritos nesta política de privacidade e em nossos termos de uso.
 		</li>
 	</ul>
 
