--- a/privacy-policy-en.html
+++ b/privacy-policy-en.html
@@ -32,6 +32,51 @@
 
 	<ul>
 		<h4>
+			Subscription Details:
+		</h4>
+		<li>
+			Our subscription services are available for a specified duration and at a designated price. The details regarding the subscription duration, pricing, and any additional features or benefits will be clearly presented within the app.
+		</li>
+	</ul>
+
+	<ul>
+		<h4>
+			Payment and Billing:
+		</h4>
+		<li>
+			All payments for subscriptions are processed through the Apple App Store. You will be billed according to the applicable pricing and billing frequency disclosed within the app. Please note that any taxes or fees imposed by the app store or other payment processors may apply.
+		</li>
+	</ul>
+
+	<ul>
+		<h4>
+			Cancellation and Refunds:
+		</h4>
+		<li>
+			If you wish to cancel your subscription or request a refund, please follow the procedures provided by the Apple App Store. We recommend reviewing the app store's terms and conditions for detailed instructions on managing subscriptions, cancellations, and refunds.
+		</li>
+	</ul>
+
+	<ul>
+		<h4>
+			Automatic Renewal:
+		</h4>
+		<li>
+			Unless you choose to cancel your subscription before the renewal date, your subscription will automatically renew at the end of each subscription period. You may manage your subscription settings and turn off automatic renewal by accessing your account settings in the app store.
+		</li>
+	</ul>
+
+	<ul>
+		<h4>
+			User Consent:
+		</h4>
+		<li>
+			By subscribing to our services, you acknowledge that you have read and agree to the terms and conditions outlined in this privacy policy and our terms of use.
+		</li>
+	</ul>
+
+	<ul>
+		<h4>
 			Data Storage and Sharing:
 		</h4>
 		<li>
